# parser

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  ConfigReader.cpp  ConfigReader.hpp  inputreader.cpp  inputreader.hpp  main.cpp
fs/: CMakeLists.txt  file.cpp  file.cxx  file.hpp  file.hxx  path.cpp  path.cxx  path.hpp
